# CleanDownloads

./: .projections.json  LICENSE  clean-downloads.cabal  stack.yaml
app/: Main.hs
